[tool.poetry]
name = "nonebot-plugin-ba-tools"
version = "0.2.0"
description = "一个BlueArchive的工具箱"
authors = [
    "hanasaki <hanasakayui2022@gmail.com>",
    "kawaiior <kawaiiorv@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "nonebot_plugin_ba_tools" }]
homepage = "https://github.com/hanasa2023/nonebot-plugin-ba-tools#readme"
repository = "https://github.com/hanasa2023/nonebot-plugin-ba-tools"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
httpx = ">=0.27.0"
nonebot2 = ">=2.3.2"
pydantic = ">=2.0, <3.0.0"
nonebot-adapter-onebot = ">=2.1.0"
nonebot-plugin-alconna = ">=0.51.1"
nonebot-plugin-localstore = ">=0.7.1"
nonebot-plugin-apscheduler = ">=0.5.0"

[tool.poetry.dev-dependencies]
nonebot2 = { version = ">=2.3.2", extras = ["fastapi", "uvicorn"] }
nonebot-adapter-onebot = ">=2.1.0"
basedpyright = ">=1.16.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.poetry.group.test.dependencies]
nonebug = "^0.3.7"
pytest-asyncio = "^0.23.8"

[tool.basedpyright]
typeCheckingMode = "standard"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = []
plugin_dirs = [""]
builtin_plugins = ["echo", "single_session"]
